[gd_scene load_steps=2 format=3 uid="uid://brr5tumuddad"]

[ext_resource type="Script" path="res://scripts/ui/steam_player_ui.gd" id="1_4hg4y"]

[node name="SteamPlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_4hg4y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 84.0
offset_bottom = 56.0

[node name="PlayerAvatar" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "name"

[node name="PlayerLvl" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "level ?"
